--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               и не приносит пользы.</p>
             <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:
               </span> учиться тоже нужно уметь, но почему-то этому мало где учат.
-              Что с этим делать?<p>
+              Что с этим делать?</p>
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить
                подход к обучению, сделать его эффективным и захватывающим.
                Эти же техники применяются на примере обучения в Практикуме.</p>
@@ -48,7 +48,7 @@
       <section class="digits">
         <h1 class="section-title">Цифры и факты</h1>
         <h2 class="section-subtitle section-subtitle_theme_white">Про учебу и мозг</h2>
-        <!-- ниже прописана таблица, состаящая из 8 ячеек -->
+        <!-- ниже прописана таблица, состоящая из 8 ячеек -->
         <div class="table">
           <div class="table__cell">
             <h2 class="table__heading table_theme_white">86 миллиардов</h2>
@@ -105,7 +105,7 @@
         <h2 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h2>
         <img src="./images/kaufman-triangle.svg" alt="здесь должен быть фон"
           class="kaufman__tringle">
-        <!-- ниже прописана таблица, состаящая из 10 ячеек -->  
+        <!-- ниже прописана таблица, состоящая из 10 ячеек -->  
         <div class="table table_theme_dark">
           <div class="table__cell_theme_dark">
             <h2 class="table__heading table__heading_theme_dark">1</h2>
