--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
   <div class="page">
     <header>
       <div class="header">
-        <img class="header__logo header__logo_place_header"
+        <img class="logo logo_place_header"
           src="./images/logo_place_header.svg" alt="здесь должен быть логотип">
-        <h3 class="header__title">Научиться учиться</h3>
-        <div class="header__subtitle"><p>Какие современные и эффективные подходы к обучению
-          вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать →</a></p>
-        </div>
+        <h1 class="header__title">Научиться учиться</h1>
+        <p class="header__subtitle">Какие современные и эффективные подходы к обучению
+          вы можете использовать в своей жизни?<a href="#" class="header__link">Узнать &rarr;</a></p>
         <img src="./images/header-image.png" alt="здесь должна быть картинка"
           class="header__main-illustration">
         <div class="header__square-pic"></div>
@@ -25,9 +24,9 @@
 
     <main class="content">
       <section class="description">
-        <div class="two-columns">
+        <article class="two-columns">
           <!-- ниже написан текст первой колонки -->
-          <h4 class="two-columns__brief">Главные проблемы в обучении</h4>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <!-- ниже написан текст второй колонки -->
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому,
@@ -41,120 +40,115 @@
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить
                подход к обучению, сделать его эффективным и захватывающим.
                Эти же техники применяются на примере обучения в Практикуме.</p>
-          </div>
+          </article>
         </div>
       </section>
 
       <section class="digits">
-        <h1 class="section-title">Цифры и факты</h1>
-        <h2 class="section-subtitle section-subtitle_theme_white">Про учебу и мозг</h2>
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учебу и мозг</p>
         <!-- ниже прописана таблица, состоящая из 8 ячеек -->
         <div class="table">
           <div class="table__cell">
-            <h2 class="table__heading table_theme_white">86 миллиардов</h2>
-            <h3 class="table__text table_theme_white">Число нейронов в мозге человека</h3>
+            <h3 class="table__heading">86 миллиардов</h3>
+            <p class="table__text">Число нейронов в мозге человека</p>
           </div>
           <div class="table__cell">
-            <h2 class="table__heading table_theme_white">2,1 миллиарда</h2>
-            <h3 class="table__text table_theme_white">Число нуждающихся в повышении
-              квалификации</h3>
-            <h3 class="table__text table_theme_white">Всемирный Банк, 2017</h3>
+            <h3 class="table__heading">2,1 миллиарда</h3>
+            <p class="table__text">Число нуждающихся в повышении
+              квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
-            <h2 class="table__heading table_theme_white">1000 терабайт</h2>
-            <h3 class="table__text table_theme_white">Объем памяти человека</h3>
+            <h3 class="table__heading">1000 терабайт</h3>
+            <p class="table__text">Объем памяти человека</p>
           </div>
           <div class="table__cell">
-            <h2 class="table__heading table_theme_white">500 триллионов</h2>
-            <h3 class="table__text table_theme_white">Число ответственных за обучение
-              нервных синапсов у взрослого человека</h3>
+            <h3 class="table__heading">500 триллионов</h3>
+            <p class="table__text">Число ответственных за обучение
+              нервных синапсов у взрослого человека</p>
           </div>
           <div class="table__cell">
-            <h2 class="table__heading table_theme_white">420 миллионов</h2>
-            <h3 class="table__text table_theme_white">Число взрослых людей моложе 25 лет,
-              не имеющих образования для трудоустройства</h3>
-            <h3 class="table__text table_theme_white">Всемирный Банк, 2017</h3>
+            <h3 class="table__heading">420 миллионов</h3>
+            <p class="table__text">Число взрослых людей моложе 25 лет,
+              не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
-            <h2 class="table__heading table_theme_white">17-20 лет</h2>
-            <h3 class="table__text table_theme_white">Пик обучаемости</h3>
+            <h3 class="table__heading">17-20 лет</h3>
+            <p class="table__text">Пик обучаемости</p>
           </div>
           <div class="table__cell">
-            <h2 class="table__heading table_theme_white">1885 год</h2>
-            <h3 class="table__text table_theme_white">Открытие кривой забывания</h3>
+            <h3 class="table__heading">1885 год</h3>
+            <p class="table__text">Открытие кривой забывания</p>
           </div>
           <div class="table__cell">
-            <h2 class="table__heading table_theme_white">1889 год</h2>
-            <h3 class="table__text table_theme_white">Открытие условного рефлекса</h3>
+            <h3 class="table__heading">1889 год</h3>
+            <p class="table__text">Открытие условного рефлекса</p>
           </div>
         </div>
       </section>
 
       <section class="feinman">
-        <div class="feinman__text">
-          <h1 class="feinman__title">Метод Фейнмана</h1>
-          <h2 class="feinman__subtitle">Выучить и не забыть</h2>
-        </div>
-        <a href="#" class="feinman__link">Подробнее →</a>
-        <img src="./images/feynman.png" alt="здесь должно быть фото Фейнмана"
-          class="feinman__photo">
+        <h2 class="feinman__title">Метод Фейнмана</h2>
+        <p class="feinman__subtitle">Выучить и не забыть</p>
+        <a href="#" class="feinman__link">Подробнее &rarr;</a>
       </section>
 
       <section class="kaufman">
-        <h1 class="section-title section-title_theme_dark">Принцип обучения</h1>
-        <h2 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h2>
-        <img src="./images/kaufman-triangle.svg" alt="здесь должен быть фон"
-          class="kaufman__tringle">
+        <h2 class="section-title section-title_theme_dark">Принцип обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <div class="kaufman__tringle"></div>
         <!-- ниже прописана таблица, состоящая из 10 ячеек -->  
         <div class="table table_theme_dark">
-          <div class="table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">1</h2>
-            <h3 class="table__text table__text_theme_dark">Выберите привлекательный проект.
-            </h3>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.
+            </p>
           </div>
-          <div class="table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">2</h2>
-            <h3 class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то
-              одном навыке.</h3>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то
+              одном навыке.</p>
           </div>
-          <div class="table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">3</h2>
-            <h3 class="table__text table__text_theme_dark">Определите целевой уровень
-              мастерства.</h3>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень
+              мастерства.</p>
           </div>
-          <div class="table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">4</h2>
-            <h3 class="table__text table__text_theme_dark">Разбейте навык на элементы.</h3>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </div>
-          <div class="table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">5</h2>
-            <h3 class="table__text table__text_theme_dark">Приготовьте всё необходимое
-              для занятий.</h3>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое
+              для занятий.</p>
           </div>
-          <div class="table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">6</h2>
-            <h3 class="table__text table__text_theme_dark">Устраните препятствия
-              для занятий.</h3>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
+            <p class="table__text table__text_theme_dark">Устраните препятствия
+              для занятий.</p>
           </div>
-          <div class="table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">7</h2>
-            <h3 class="table__text table__text_theme_dark">Выделите специальное время
-              для занятий</h3>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
+            <p class="table__text table__text_theme_dark">Выделите специальное время
+              для занятий</p>
           </div>
-          <div class="table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">8</h2>
-            <h3 class="table__text table__text_theme_dark">Создайте быстрые петли
-              обратной связи.</h3>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли
+              обратной связи.</p>
           </div>
-          <div class="table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">9</h2>
-            <h3 class="table__text table__text_theme_dark">Занимайтесь по расписанию,
-              короткими интенсивными интервалами.</h3>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию,
+              короткими интенсивными интервалами.</p>
           </div>
-          <div class="table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">10</h2>
-            <h3 class="table__text table__text_theme_dark">Уделяйте внимание количеству
-              и скорости.</h3>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству
+              и скорости.</p>
           </div>
         </div>
       </section>
@@ -162,35 +156,39 @@
     <footer class="footer">
       <div class="footer__columns">
         <!-- первая колонка подвала -->
-        <div class="footer__columns_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <img src="./images/logo_place_footer.svg" alt="здесь должен быть логотип"
-            class="logo_place_footer">
-          <p class="footer__author">— &copy @ 2020. Валерия Виноградова</p>
+            class="logo logo_place_footer">
+          <p class="footer__author">— &copy; @ 2020. Валерия Виноградова</p>
         </div>
         <!-- вторая колонка подвала -->
-        <div class="footer__columns_content_info">
-          <p class="footer__column-heading">О Практикуме</p>
-          <div class="footer__column-links">
-            <a href="#" class="footer__column-links">Главная</a>
-            <a href="#" class="footer__column-links">Концепция</a>
-            <a href="#" class="footer__column-links">Наставники</a>
-          </div>
+        <div class="footer__column footer__column_content_info">
+          <h2 class="footer__column-heading">О Практикуме</h2>
+          <nav>
+            <ul class="footer__column-links">
+              <li><a href="#" class="footer__column-link">Главная</a></li>
+              <li><a href="#" class="footer__column-link">Концепция</a></li>
+              <li><a href="#" class="footer__column-link">Наставники</a></li>
+            </ul>
+          </nav>
         </div>
         <!-- третья колонка подвала -->
-        <div class="footer__columns_content_social">
-          <p class="footer__column-heading">Соцсети</p>
-          <div>
-            <!-- ссылки на соцсети с иконками логотипов -->   
-            <a href="#" class="footer__column-links"><img
-              src="./images/facebook_color_white.svg" alt="логотип Facebook"
-              class="social-icon">Facebook</a>
-            <a href="#" class="footer__column-links"><img
-              src="./images/vk_color_white.svg" alt="логотип ВКонтакте"
-              class="social-icon">ВКонтакте</a>
-            <a href="#" class="footer__column-links"><img
-              src="./images/instagram_color_white.svg" alt="логотип Instagram"
-              class="social-icon">Instagram</a>
-          </div>  
+        <div class="footer__column footer__column_content_social">
+          <h2 class="footer__column-heading">Соцсети</h2>
+          <nav>
+            <ul class="footer__column-links">
+              <!-- ссылки на соцсети с иконками логотипов -->   
+              <li><a href="#" class="footer__column-link"><img
+                src="./images/facebook_color_white.svg" alt="логотип Facebook"
+                class="footer__social-icon">Facebook</a></li>
+              <li><a href="#" class="footer__column-link"><img
+                src="./images/vk_color_white.svg" alt="логотип ВКонтакте"
+                class="footer__social-icon">ВКонтакте</a></li>
+              <li><a href="#" class="footer__column-link"><img
+                src="./images/instagram_color_white.svg" alt="логотип Instagram"
+                class="footer__social-icon">Instagram</a></li>
+            </ul>
+          </nav>   
         </div>
       </div>
     </footer>
