--- a/index.html
+++ b/index.html
@@ -51,27 +51,32 @@
           <div class="cards__item">
             <img src="./sprint-2-sources/images_sprint-2/cards-attention.png" alt="картинка" class="cards__image">
             <h3 class="cards__title">Два вида внимания</h3>
-            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+            <p class="cards__description">Глубокие знания возникают, если чередовать
+                сфокусированное и рассеянное мышление.</p>
           </div>
           <div class="cards__item">
             <img src="./sprint-2-sources/images_sprint-2/cards-recall.png" alt="картинка" class="cards__image">
             <h3 class="cards__title">Recall</h3>
-            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить
+                разрозненные порции памяти.</p>
           </div>
           <div class="cards__item">
             <img src="./sprint-2-sources/images_sprint-2/cards-interliving.png" alt="картинка" class="cards__image">
             <h3 class="cards__title">Интерливинг</h3>
-            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+            <p class="cards__description">Изучайте несколько навыков одновременно,
+                они обогащают друг друга.</p>
           </div>
           <div class="cards__item">
             <img src="./sprint-2-sources/images_sprint-2/cards-question.png" alt="картинка" class="cards__image">
             <h3 class="cards__title">Вопросы</h3>
-            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос,
+                который вас действительно волнует.</p>
           </div>
           <div class="cards__item">
             <img src="./sprint-2-sources/images_sprint-2/cards-competence.png" alt="картинка" class="cards__image">
             <h3 class="cards__title">Иллюзия компетентности</h3>
-            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется,
+                что вы владеете новой темой.</p>
           </div>
         </div>
       </section>
@@ -99,7 +104,11 @@
           <h2 class="two-columns__brief">История Барбары Оакли.</h2>
           <!-- ниже написан текст второй колонки -->
           <div class="two-columns__main-text">
-            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием,
+                причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно,
+                что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход
+                к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже,
+                чем у тех, кому всё ясно с первого взгляда.</p>
           </div>
         </article>
       </section>
@@ -159,7 +168,9 @@
         <div class="khan__container">
           <h3 class="khan__author">Салман Хан</h3>
           <h2 class="khan__title">Весь мир - школа</h2>
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру.
+              Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания,
+              которые приносят успех в школе, карьере и жизни.</p>
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
@@ -230,12 +241,16 @@
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <div class="resources__logo-zone">
-          <img src="./sprint-2-sources/images_sprint-2/logo/resources-arzamas.svg" alt="логотип" class="resources__logo">
-          <img src="./sprint-2-sources/images_sprint-2/logo/resources-n1.svg" alt="логотип" class="resources__logo">
-          <img src="./sprint-2-sources/images_sprint-2/logo/resources-strelka.svg" alt="логотип" class="resources__logo">
-          <img src="./sprint-2-sources/images_sprint-2/logo/resources-polka.svg" alt="логотип" class="resources__logo">
-        </div>
+        <nav class="resources__logo-zone">
+          <a href="https://arzamas.academy/" target='_blank'><img src="./sprint-2-sources/images_sprint-2/logo/resources-arzamas.svg"
+              alt="логотип" class="resources__logo"></a>
+          <a href="https://nplus1.ru/" target='_blank'><img src="./sprint-2-sources/images_sprint-2/logo/resources-n1.svg"
+             alt="логотип" class="resources__logo"></a>
+          <a href="https://strelkamag.com/ru" target='_blank'><img src="./sprint-2-sources/images_sprint-2/logo/resources-strelka.svg"
+             alt="логотип" class="resources__logo"></a>
+          <a href="https://polka.academy/" target='_blank'><img src="./sprint-2-sources/images_sprint-2/logo/resources-polka.svg"
+             alt="логотип" class="resources__logo"></a>
+        </nav>
       </section>
     </main>
     <footer class="footer">
