Готовый проект для первого ревью второго спринта

--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
       <section class="feinman">
         <h2 class="feinman__title">Метод Фейнмана</h2>
         <p class="feinman__subtitle">Выучить и не забыть</p>
-        <a href="#" class="feinman__link">Подробнее &rarr;</a>
+        <a href="https://medium.com/bazanov-org/%D0%BC%D0%B5%D1%82%D0%BE%D0%B4-%D0%BE%D0%B1%D1%83%D1%87%D0%B5%D0%BD%D0%B8%D1%8F-%D1%84%D0%B5%D0%B9%D0%BD%D0%BC%D0%B0%D0%BD%D0%B0-6abe6915ef8a"
+          target='_blank' class="feinman__link">Подробнее &rarr;</a>
       </section>
 
       <section class="digits">
@@ -175,7 +176,7 @@
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img src="./sprint-2-sources/images_sprint-2/khan-book.jpg" alt="картинка" class="khan__book-pic">
-            <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
+            <a href="https://www.ozon.ru/context/detail/id/31700837/" target='_blank' class="khan__buy-link">Купить книгу &rarr;</a>
           </div>
         </div>
       </section>
@@ -278,13 +279,13 @@
           <nav>
             <ul class="footer__column-links">
               <!-- ссылки на соцсети с иконками логотипов -->   
-              <li><a href="#" class="footer__column-link"><img
+              <li><a href="https://www.facebook.com/" target='_blank' class="footer__column-link"><img
                 src="./images/facebook_color_white.svg" alt="логотип Facebook"
                 class="footer__social-icon">Facebook</a></li>
-              <li><a href="#" class="footer__column-link"><img
+              <li><a href="https://vk.com" target='_blank'  class="footer__column-link"><img
                 src="./images/vk_color_white.svg" alt="логотип ВКонтакте"
                 class="footer__social-icon">ВКонтакте</a></li>
-              <li><a href="#" class="footer__column-link"><img
+              <li><a href="https://www.instagram.com" target='_blank'  class="footer__column-link"><img
                 src="./images/instagram_color_white.svg" alt="логотип Instagram"
                 class="footer__social-icon">Instagram</a></li>
             </ul>
