--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               frameborder="0" allowfullscreen></iframe>
           </div>
           <div class="video__iframe">
-            <iframe id="ytplayer" type="text/html" width="515" height="316"
+            <iframe id="tplayer" type="text/html" width="515" height="316"
               src="https://www.youtube.com/embed/arj7oStGLkU"
               frameborder="0" allowfullscreen></iframe>
           </div>
