--- a/index.html
+++ b/index.html
@@ -4,22 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body>
   <div class="page">
-    <header>
-      <div class="header">
-        <img class="logo logo_place_header"
-          src="./images/logo_place_header.svg" alt="здесь должен быть логотип">
-        <h1 class="header__title">Научиться учиться</h1>
-        <p class="header__subtitle">Какие современные и эффективные подходы к обучению
-          вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать &rarr;</a></p>
-        <img src="./images/header-image.png" alt="здесь должна быть картинка"
-          class="header__main-illustration">
-        <div class="header__square-pic rotation"></div>
-      </div>
+    <header class="header">
+      <img class="logo logo_place_header"
+        src="./images/logo_place_header.svg" alt="логотип Яндекс Практикума">
+      <h1 class="header__title">Научиться учиться</h1>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению
+        вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать &rarr;</a></p>
+      <img src="./images/header-image.png" alt="здесь должна быть картинка"
+        class="header__main-illustration">
+      <div class="header__square-pic rotation"></div>
     </header>
 
     <main class="content">
@@ -85,16 +82,12 @@
         <h2 class="section-title">Видео на TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <div class="video__iframe">
-            <iframe id="ytplayer" type="text/html" width="515" height="316"
+            <iframe class="video__iframe" id="ytplayer"
               src="https://www.youtube.com/embed/5MgBikgcWnY"
-              frameborder="0" allowfullscreen></iframe>
-          </div>
-          <div class="video__iframe">
-            <iframe id="tplayer" type="text/html" width="515" height="316"
+              allowfullscreen></iframe>
+            <iframe class="video__iframe" id="tplayer"
               src="https://www.youtube.com/embed/arj7oStGLkU"
-              frameborder="0" allowfullscreen></iframe>
-          </div>
+              allowfullscreen></iframe>
         </div>
       </section>
 
@@ -169,13 +162,13 @@
         <div class="khan__container">
           <h3 class="khan__author">Салман Хан</h3>
           <h2 class="khan__title">Весь мир - школа</h2>
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру.
+          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру.
               Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания,
               которые приносят успех в школе, карьере и жизни.</p>
-          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author">Джордж Лукас</blockquote>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img src="./sprint-2-sources/images_sprint-2/khan-book.jpg" alt="картинка" class="khan__book-pic">
+            <img src="./sprint-2-sources/images_sprint-2/khan-book.jpg" alt="обложка книги" class="khan__book-pic">
             <a href="https://www.ozon.ru/context/detail/id/31700837/" target='_blank' class="khan__buy-link">Купить книгу &rarr;</a>
           </div>
         </div>
@@ -242,16 +235,16 @@
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <nav class="resources__logo-zone">
-          <a href="https://arzamas.academy/" target='_blank'><img src="./sprint-2-sources/images_sprint-2/logo/resources-arzamas.svg"
-              alt="логотип" class="resources__logo"></a>
-          <a href="https://nplus1.ru/" target='_blank'><img src="./sprint-2-sources/images_sprint-2/logo/resources-n1.svg"
-             alt="логотип" class="resources__logo"></a>
-          <a href="https://strelkamag.com/ru" target='_blank'><img src="./sprint-2-sources/images_sprint-2/logo/resources-strelka.svg"
-             alt="логотип" class="resources__logo"></a>
-          <a href="https://polka.academy/" target='_blank'><img src="./sprint-2-sources/images_sprint-2/logo/resources-polka.svg"
-             alt="логотип" class="resources__logo"></a>
-        </nav>
+        <ul class="resources__logo-zone">
+          <li><a href="https://arzamas.academy/" target='_blank'><img src="./sprint-2-sources/images_sprint-2/logo/resources-arzamas.svg"
+              alt="логотип Arzamas" class="resources__logo"></a></li>
+          <li><a href="https://nplus1.ru/" target='_blank'><img src="./sprint-2-sources/images_sprint-2/logo/resources-n1.svg"
+             alt="логотип N+1" class="resources__logo"></a></li>
+          <li><a href="https://strelkamag.com/ru" target='_blank'><img src="./sprint-2-sources/images_sprint-2/logo/resources-strelka.svg"
+             alt="логотип STRELKA" class="resources__logo"></a></li>
+          <li><a href="https://polka.academy/" target='_blank'><img src="./sprint-2-sources/images_sprint-2/logo/resources-polka.svg"
+             alt="логотип ПОЛКА" class="resources__logo"></a></li>
+          </ul>
       </section>
     </main>
     <footer class="footer">
